{
    "name": "InputSystem",
    "maps": [
        {
            "name": "MainGameplay",
            "id": "19f1f394-eb57-43a2-98bf-48afa1b70bb2",
            "actions": [
                {
                    "name": "MousePosition",
                    "type": "Value",
                    "id": "0c07d708-cddc-40c5-a1c6-e93f0bdfc755",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "MouseAction1",
                    "type": "Button",
                    "id": "f6accf54-a895-4fb6-9f43-1ec933de1ebb",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "MouseAction2",
                    "type": "Button",
                    "id": "52f26b5d-e791-482e-b856-b629621abbd8",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "6c407139-4ec1-45a2-8e69-9b7cf82362b6",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MousePosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4a351a0f-2c2c-4415-a316-a2586d1999a4",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseAction1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "45b5f021-6523-416a-a334-ce2f6ef6f324",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseAction2",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}